[tool.poetry]
name = "Mechanics_Projects"
version = "0.1.0"
description = "UPC - EETAC: Mechanics (Python project)"
authors = ["nahuel.siles <nahuel.siles31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
